# tourboxneo

./: LICENSE.md  README.md  requirements.txt  setup.cfg
.github/workflows/: codeql-analysis.yml
init/: tourbox
tourboxneo/: constants.py  device.py
udev/: 99-tourbox.rules
