[metadata]
name = tourboxneo
version = attr: tourboxneo.VERSION
description = Wrapper for TourBox (NEO) from Serial to uinput
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
keywords = input, keyboard, usb, gadget
license = MIT License
classifier =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Miscellaneous
    Topic :: System :: Hardware

[options]
packages = find:
install_requires =
    pyserial
    evdev

[options.package_data]
* = *.md

[options.entry_points]
console_scripts =
    tourboxneo = tourboxneo.device:main

[options.data_files]
/etc/init.d/ =
    init/tourbox
